--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,7 +26,7 @@
     </script>
   </head>
 
-  <body style="display: block">
+  <body>
     <base href="/">
     <my-app>Loading AppComponent content here ...</my-app>
   </body>
